Hotfix for navigation alignment bug

--- a/css/sass/layout/_header.scss
+++ b/css/sass/layout/_header.scss
@@ -15,10 +15,9 @@ header[role="banner"]{
     }
   }
 
-  @media screen and (min-width: $bp-mobile) {
+  @media screen and (min-width: $bp-phablet) {
     @include container;
     @include flexbox;
-    text-align:left;
     -webkit-align-items:center;
     align-items:center;
   }
