--- a/css/sass/layout/_navigation.scss
+++ b/css/sass/layout/_navigation.scss
@@ -3,7 +3,10 @@
   font-size:1.2rem;
   text-transform: uppercase;
   letter-spacing:1px;
-  text-align:right;
+  text-align:center;
+  @media screen and (min-width: $bp-phablet) {
+    text-align:right;
+  }
   width:100%;
   flex:1;
   -webkit-flex:1;
